test/errors/wav-mono/wav-mono.rom
Error in `wav-mono.asm` on line 2: WAV is not mono
